# fitter

./: .gitignore  Dockerfile  Task_2_Section_A.docx  Task_2_Section_C.docx  docker-compose.yaml  prestart.sh  pyproject.toml  run_local.sh  run_prod.sh  run_tests.sh  start.sh  stop.sh
app/: alembic.ini  init_data.py  migrate.py  pre_start.py
app/api/: api.py
app/api/dependencies/: auth.py  database.py  pagination.py
app/api/routes/: __init__.py  addresses.py  customer_create.py  customers.py  fitters.py  fittings.py  login.py  logout.py  stores.py
app/api/templates/: base.html  create-customer.html  customer.html  customers.html  fitter.html  fitters.html  index.html  login.html
app/core/: settings.py  tasks.py
app/db/: tasks.py
app/db/repositories/: address.py  addresses.py  customer.py  customers.py  fitter.py  fitters.py  fitting.py  fittings.py  order.py  orders.py  product.py  products.py  store.py  stores.py
app/migrations/: env.py
app/migrations/versions/: ee80b5f12d95_initial_revision.py
app/models/: __init__.py  address.py  base.py  customer.py  fitter.py  fitting.py  models.py  order.py  order_product.py  product.py  product_order_link.py  store.py  token.py
app/server/: server.py
app/server/dependencies/: auth.py  database.py  pagination.py
app/server/routes/: __init__.py  addresses.py  customer_create.py  customer_delete.py  customer_update.py  customers.py  fitter_create.py  fitter_delete.py  fitter_update.py  fitters.py  fittings.py  login.py  reports.py  store_create.py  store_delete.py  store_update.py  stores.py
app/server/templates/: base.html  create-customer.html  create-fitter.html  create-store.html  customer.html  customers.html  fitter.html  fitters.html  fitting-search.html  fittings-by-fitter.html  fittings-today.html  index.html  (+6 more)
app/services/: auth.py
data/nginx/: app.conf
tests/: conftest.py
(+8 files in other folders)
