[tool.poetry]
name = "c868"
version = "0.1.0"
description = "WGU Captsone Project"
authors = ["Elliott Moos <emoos@wgu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
