[tool.poetry]
name = "fitter"
version = "0.1.0"
description = "WGU Captsone Project"
authors = ["Elliott Moos <emoos@wgu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlmodel = "^0.0.8"
pydantic = {extras = ["email"], version = "^1.10.4"}
bcrypt = "^4.0.1"
passlib = "^1.7.4"
pyjwt = "^2.6.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
alembic = "^1.9.3"
tenacity = "^8.2.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python-dateutil = "^2.8.2"
asgi-lifespan = "^2.0.0"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
